--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,33 +5,43 @@
     android:layout_height="match_parent"
     android:padding="4dp"
     tools:context=".MainActivity">
+
     <TextView
         android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
+        android:layout_width="600dp"
+        android:layout_height="80dp"
+        android:padding="10dp"
         android:background="#008080"
-        android:padding="5dp"
-        android:text="GPS APP"
+        android:fontFamily="@font/caveat_brush"
+        android:gravity="bottom"
+        android:text="PupBuddy"
         android:textColor="#fff"
-        android:textSize="24sp"
+        android:textSize="38sp"
         android:textStyle="bold" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="281dp"
         android:text="Current GPS Location"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         android:textStyle="bold" />
+
     <Button
         android:id="@+id/getLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text"
+        android:layout_alignParentStart="true"
         android:layout_centerInParent="true"
-        android:layout_marginTop="40dp"
-        android:text="Get location" />
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="654dp"
+        android:background="#008080"
+        android:fontFamily="@font/caveat_brush"
+        android:textSize="26sp"
+        android:text="Add" />
 </RelativeLayout>
