--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,29 +18,37 @@
         android:textColor="@color/white"
         android:textSize="38sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/gpsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/appNameText"
         android:layout_centerInParent="true"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="32dp"
+        android:padding="8dp"
         android:text="@string/gps_location"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/capturedImage"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appNameText"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.32999998" />
+        app:layout_constraintVertical_bias="0.65999997" />
+
+    <ImageView
+        android:id="@+id/capturedImage"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:layout_margin="4dp"
+        android:contentDescription="@string/captured_image"
+        android:src="@color/transparent"
+        app:layout_constraintBottom_toTopOf="@+id/getLocationButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gpsTextView" />
 
     <Button
         android:id="@+id/getLocationButton"
@@ -49,19 +57,18 @@
         android:layout_below="@+id/gpsTextView"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:padding="8dp"
         android:background="@color/pupbuddy_teal"
         android:contentDescription="@string/get_image"
         android:drawableStart="@drawable/baseline_pin_drop_24"
-        android:drawablePadding="8dp"
         android:fontFamily="@font/caveat_brush"
-        android:padding="8dp"
         android:text="@string/get_image"
         android:textColor="@color/white"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/capturedImage"
         app:layout_constraintVertical_bias="0.65999997" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
